Update build.gradle.kts
Prevent
```
Unable to make protected final java.lang.Class java.lang.ClassLoader.defineClass(java.lang.String,byte[],int,int,java.security.ProtectionDomain) throws java.lang.ClassFormatError accessible: module java.base does not "opens java.lang" to unnamed module @238e0d81
```

(cherry picked from commit 707ba9ca581f1ec2212d88b98996a17d4b0ae740)